cash out event handler added

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
                     <div class="divider"></div>
 
                     <!-- form start here -->
-                    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl p-2">
+                    <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl p-2">
                         <form class="card-body">
                           <div class="form-control">
                             <label class="label">
@@ -59,11 +59,36 @@
                         </form>
                       </div>
                     <!-- form ends here -->
+
+                    <!-- cash out sesction start here -->
+
+                    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl p-2">
+                        <form class="card-body">
+                          <div class="form-control">
+                            <label class="label">
+                              <span class="label-text">Amount</span>
+                            </label>
+                            <input id="inputCashoutAmount" type="text" placeholder="Enter amount" class="input input-bordered" required />
+                          </div>
+                          <div class="form-control">
+                            <label class="label">
+                              <span class="label-text">Pin</span>
+                            </label>
+                            <input id="cashOutPin" type="password" placeholder="Pin" class="input input-bordered" required />
+                          </div>
+                          <div class="form-control mt-6">
+                            <button id="btn-cash-Out" class="btn btn-primary">Cash Out</button>
+                          </div>
+                        </form>
+                      </div>
+                    <!-- cash out sesction ends here -->
                   </div>
                 </div>
               </div>
         </div>
     </main>
+    <script src="./js/utilities.js"></script>
     <script src="./js/home.js"></script>
+    <script src="./js/cash_out.js"></script>
 </body>
 </html>
