transaction event handler added and some calculation system updated

--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,9 +29,11 @@
 
                     <!-- add money and cashout button -->
                      
-                     <div>
-                     <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Add Money</button>
-                     <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Cash Out</button>
+                     <div class="flex justify-center gap-2">
+                     <button id="addMoneyButton" class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg w-[100px] h-[60px]">Add Money</button>
+                     <button id="cashOutButton" class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg w-[100px] h-[60px]">Cash Out</button>
+                     <button id="transactionButton" class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg w-[110px] h-[60px]">Transaction</button>
+
                     </div>
                     
                     <!-- add money and cashout button -->
@@ -39,7 +41,7 @@
                     <div class="divider"></div>
 
                     <!-- form start here -->
-                    <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl p-2">
+                    <div id="add_money_section" class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl p-2">
                         <form class="card-body">
                           <div class="form-control">
                             <label class="label">
@@ -62,7 +64,7 @@
 
                     <!-- cash out sesction start here -->
 
-                    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl p-2">
+                    <div id="cash_out_section" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl p-2">
                         <form class="card-body">
                           <div class="form-control">
                             <label class="label">
@@ -90,5 +92,6 @@
     <script src="./js/utilities.js"></script>
     <script src="./js/home.js"></script>
     <script src="./js/cash_out.js"></script>
+    <script src="./js/feature.js"></script>
 </body>
 </html>
