transaction history functionality added

--- a/home.html
+++ b/home.html
@@ -84,6 +84,15 @@
                         </form>
                       </div>
                     <!-- cash out sesction ends here -->
+
+                    <!-- transaciton section start here -->
+ 
+                    <div id="transation_section" class="bg-amber-400 hidden w-full  p-1 text-center">
+                        
+                    </div>
+
+
+                     <!-- transation section ends here -->
                   </div>
                 </div>
               </div>
